--- a/css&scss/index.scss
+++ b/css&scss/index.scss
@@ -263,12 +263,12 @@ nav {
     //     margin-left: 54px;
     //   } 
     .time {
-        margin-left: 20px;
+        margin-left: 28px;
         padding-top: 20px;
         color: var(--orange);
         // margin-top: 20px;
         @include mobile {
-            margin-left: -162px;
+            margin-left: -149px;
             padding-top: 0px;
             padding-left: 16px;
         }
@@ -303,17 +303,17 @@ nav {
         word-spacing: 20%;
         font-family: 'Ubuntu', sans-serif;
         font-size: 24px;
-        margin-top: -377px;
+        margin-top: -366px;
         width: 589px;
         margin-right: 231px;
         float: right;
         //   margin-top: -396px;
         @include mobile {
             margin-top: -2px;
-            width: 611px;
+            width: 607px;
             padding: -1%;
             font-size: 29px;
-            margin-right: -379px;
+            margin-right: -359px;
             display: table-column;
         }
         @include tablet {
@@ -358,6 +358,9 @@ nav {
     .btnn {
         padding-top: 14px;
         margin-left: 14px;
+        @include mobile {
+            margin-bottom: 20px;
+        }
         a {
             margin-left: 8px;
             margin: top 20px;
@@ -405,7 +408,7 @@ h2 {
         margin-top: 0px;
     }
     @include laptop {
-        margin-left: 40px;
+        // margin-left: 382px;
     }
 }
 
